# vizcrystal

./: Cargo.toml  README.md  flake.nix  index.html  package-lock.json  package.json  vizmat_bg.wasm.d.ts
.github/workflows/: deploy.yml  release.yml
assets/: index-BCS5c1pD.js  index-CdlKHKen.js  index-CuJm0EhT.js  index-CzjM_csN.js  index-NpcLwepe.js  index-iinzcwaI.js  index-juCriYLU.js  index-xZDdyHWB.js
src/: client.rs  constants.rs  io.rs  lib.rs  main.rs  parse.rs  server.rs  structure.rs  ui.rs
wasm/: index.html  index.js  package.json  test.js  vite.config.js
