[package]
name = "vizmat"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", features = ["default"] }
anyhow = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.16", features = ["webgl2"] }

# optimize for smaller WASM binary size
[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
