[package]
name = "vizmat"
version = "0.1.0"
edition = "2021"
description = "blob for every crates relate to ccmat utils, and crates."
authors = ["rs4rse.github.io"]
readme = "README.md"
repository = "https://github.com/rs4rse/vizmat"
homepage = "https://github.com/rs4rse/vizmat"
license = "MIT OR Apache-2.0"
keywords = ["science", "crystal", "material", "molecule"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    # Core functionality
    "bevy_asset",         # Asset management
    "bevy_winit",         # Window management

    # Rendering
    "bevy_core_pipeline", # 3D camera and pipeline
    "bevy_pbr",           # PBR materials and lighting
    "bevy_render",        # Core rendering
    "bevy_sprite",        # Sprite rendering (needed by DefaultPlugins)

    # Platform support
    "png",                # PNG texture support
    "bevy_scene",         # Scene management
    "bevy_gltf",          # GLTF support
    "bevy_text",          # Text rendering (needed by DefaultPlugins)
    "bevy_ui",            # UI support (needed by DefaultPlugins)

    # Logging and diagnostics
    "bevy_log",           # Logging support

    # Multi-threading
    "multi_threaded",     # Multi-threaded task execution

    # Serialization
    "serialize",          # Serde support

    # Performance
    "dynamic_linking",    # Faster compilation in debug mode
] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.32.0", features = ["async-std", "async-std-runtime"] }
futures-util = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Use same bevy config as main dependencies (inherited)
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent"] }
js-sys = "0.3"

[features]
webgpu = ["bevy/webgpu"]
webgl2 = ["bevy/webgl2"]

[lib]
# need both, cdylib for wasm, rlib for main.rs
crate-type = ["cdylib", "rlib"]

# optimize for smaller WASM binary size
[profile.release]
lto = "thin"
opt-level = "s"
codegen-units = 1
incremental = false
debug = false

[profile.dev]
opt-level = 0
